# snake-ai

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  SnakeAI.spec  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yml
.github/workflows/: pylint.yml
docs/: architecture.md  setup.md  training.md
notebooks/: training_analysis.ipynb
scripts/: setup_windows.bat
src/: __init__.py  main.py
src/ai/: __init__.py  agent.py  memory.py  model.py
src/game/: __init__.py  constants.py  environment.py  snake.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py  test_agent.py  test_environment.py
